--- a/index.html
+++ b/index.html
@@ -362,7 +362,7 @@ var cfflinkhashtags = "false";
                   <div class="row">
                     <div class="col-lg-3 p-l-0  col-md-3 col-4 col-sm-4">
                       <div class="header_logo_part">
-                        <a class="navbar-brand" href="https://dongyi.hk">
+                        <a class="navbar-brand" href="/">
                           <img src="texicon.png" alt="" class="img-fluid hm_logo">
                         </a>
                       </div>
