--- a/index.html
+++ b/index.html
@@ -1866,11 +1866,11 @@ var cfflinkhashtags = "false";
             </div>
             <div class="col-lg-6 col-md-6">
               <div class="footer-top-part-right">
-                  <a target="_blank" data-aos="fade-up" aos-duration="700" href="https://www.facebook.com/dsl.global" ><i class="fa-brands fa-facebook-f"></i></a>
-                  <a target="_blank"  data-aos="fade-up" aos-duration="700" href="https://www.linkedin.com/company/dsl-global" ><i class="fa-brands fa-linkedin"></i></a>
-                  <a target="_blank"  data-aos="fade-up" aos-duration="700" href="https://twitter.com/dsl_global" ><i class="fa-brands fa-twitter"></i></a>
-                  <a target="_blank" data-aos="fade-up" aos-duration="700" href="https://www.instagram.com/dsl.global/" ><i class="fa-brands fa-instagram"></i></a>
-                  <a target="_blank"  data-aos="zoom-in" aos-duration="700" href="https://www.youtube.com/@dsl.global" ><i class="fa-brands fa-youtube"></i></a>
+                  <a target="_blank" data-aos="fade-up" aos-duration="700" href="https://www.facebook.com/dl" ><i class="fa-brands fa-facebook-f"></i></a>
+                  <a target="_blank"  data-aos="fade-up" aos-duration="700" href="https://www.linkedin.com/cbal" ><i class="fa-brands fa-linkedin"></i></a>
+                  <a target="_blank"  data-aos="fade-up" aos-duration="700" href="https://twitter.com/d" ><i class="fa-brands fa-twitter"></i></a>
+                  <a target="_blank" data-aos="fade-up" aos-duration="700" href="https://www.instagram.com//" ><i class="fa-brands fa-instagram"></i></a>
+                  <a target="_blank"  data-aos="zoom-in" aos-duration="700" href="https://www.youtube.com/" ><i class="fa-brands fa-youtube"></i></a>
               </div>
             </div>
           </div>
@@ -1889,12 +1889,12 @@ var cfflinkhashtags = "false";
 <figure class="wp-block-image size-full is-resized"><img loading="lazy" decoding="async" src="/texicon.png" alt="" class="wp-image-941" width="212" height="84"/></figure>
 </section><section class="footer-area footer-area-one">
 <div style="height:11px" aria-hidden="true" class="wp-block-spacer"></div>
-</section><section class="footer-area footer-area-one"><h6 class="subtitle"><strong>Extra Menus</strong></h6></section><section class="footer-area footer-area-one"><div class="menu-myfootermenu-container"><ul id="menu-myfootermenu" class="menu"><li id="menu-item-719" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-719"><a href="https://dongyi.hk/explore-us/">Explore us</a></li>
-<li id="menu-item-1304" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-1304"><a href="https://dongyi.hk/our-offices/">Our Offices</a></li>
-<li id="menu-item-716" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-716"><a href="https://dongyi.hk/news-events/">NEWS &amp; EVENTS</a></li>
-<li id="menu-item-721" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-721"><a href="https://dongyi.hk/product-category-list/">Products</a></li>
-<li id="menu-item-717" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-717"><a href="https://dongyi.hk/gallery/">Gallery</a></li>
-<li id="menu-item-718" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-718"><a href="https://dongyi.hk/join-us/">Join us</a></li>
+</section><section class="footer-area footer-area-one"><h6 class="subtitle"><strong>Extra Menus</strong></h6></section><section class="footer-area footer-area-one"><div class="menu-myfootermenu-container"><ul id="menu-myfootermenu" class="menu"><li id="menu-item-719" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-719"><a href="explore-us/">Explore us</a></li>
+<li id="menu-item-1304" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-1304"><a href="/our-offices/">Our Offices</a></li>
+<li id="menu-item-716" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-716"><a href="/news-events/">NEWS &amp; EVENTS</a></li>
+<li id="menu-item-721" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-721"><a href="product-category-list/">Products</a></li>
+<li id="menu-item-717" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-717"><a href="/gallery/">Gallery</a></li>
+<li id="menu-item-718" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-718"><a href="join-us/">Join us</a></li>
 <li id="menu-item-720" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-720"><a href="https://dongyi.hk/contact/">Contact</a></li>
 </ul></div></section>                  </div>
                 </div>
